--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "login-page",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "author": "Maxence BRICAULT",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -23,6 +24,8 @@
     "chai": "^4.1.2",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
     "vue-template-compiler": "^2.6.10"
   }
 }
